<resources>
    <string name="app_name">Couture Corner</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="brands">Brands</string>
    <string name="product">Product</string>
    <string name="product_title">product Title</string>
    <string name="flash_sale">Flash Sale</string>
    <string name="category">Category</string>
    <string name="DonthaveanccountSignUp">Don\'t have an account ?</string>
    <string name="Orsigninwith">Or sign in with</string>
    <string name="SignIn">Sign In</string>
    <string name="ForgotPassword">Forgot Password?</string>
    <string name="Email">Email</string>
    <string name="Password">Password</string>
    <string name="HWelcomebackyouvebeenmissed">Hi! Welcome back, you\'ve been missed</string>
    <string name="SignUp">" Sign Up"</string>
    <string name="alreadyhaveacc">"Already have account ? "</string>
    <string name="signIn">Sign In</string>
    <string name="t_shirts">T-shirts</string>
    <string name="shoesUpper">SHOES</string>
    <string name="accessories">ACCESSORIES</string>
    <string name="all">All</string>
    <string name="price">%1$s %2$s</string>
    <string name="default_web_client_id">983432677555-gaurraemolumvdnj9nsapeldml4t4826.apps.googleusercontent.com</string>
    <string name="order_details">Order Details</string>
    <string name="adress"> Address: %1$s , %2$s</string>
    <string name="priceOrder">Price: %1$s %2$s</string>
    <string name="Totalprice">Total price: %1$s %2$s</string>
</resources>